force-app/main/default/objects/Gemini_Config__mdt/Gemini_Config__mdt.object-meta.xml
<CustomObject>
    <label>Gemini Config</label>
    <pluralLabel>Gemini Configs</pluralLabel>
</CustomObject>