force-app/main/default/objects/Gemini_Config__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Gemini API key from Google Cloud Console</description>
</CustomField>