force-app/main/default/objects/Gemini_Config__mdt/fields/Default_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Model__c</fullName>
    <label>Default Model</label>
    <type>Text</type>
    <length>100</length>
    <defaultValue>&apos;gemini-2.0-flash&apos;</defaultValue>
    <description>Default Gemini model to use for API calls</description>
</CustomField>