force-app/main/default/objects/Gemini_Config__mdt/fields/Endpoint_Base__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Base__c</fullName>
    <label>Endpoint Base URL</label>
    <type>Url</type>
    <defaultValue>&apos;https://generativelanguage.googleapis.com&apos;</defaultValue>
    <description>Base URL for the Gemini API</description>
</CustomField>