force-app/main/default/objects/Gemini_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this configuration is active</description>
</CustomField>